--- a/services/storage-service/k8s-deploymet.yaml
+++ b/services/storage-service/k8s-deploymet.yaml
@@ -1,22 +1,30 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: storage-service
-  labels: { app: storage-service }
+  name: api-service
 spec:
   replicas: 2
-  selector: { matchLabels: { app: storage-service } }
+  selector:
+    matchLabels:
+      app: api-service
   template:
     metadata:
-      labels: { app: storage-service }
+      labels:
+        app: api-service
     spec:
       containers:
-      - name: storage
-        image: your-registry/storage-service:latest
-        ports: [{ containerPort: 5002 }]
-        volumeMounts:
-          - name: storage-volume
-            mountPath: /data/storage
-      volumes:
-        - name: storage-volume
-          emptyDir: {}
+      - name: api-service
+        image: api-service:local
+        ports:
+        - containerPort: 5001
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: api-service
+spec:
+  selector:
+    app: api-service
+  ports:
+  - port: 5001
+    targetPort: 5001
