--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 version: '3.8'
+
 services:
   monolith:
     image: monolith:local
@@ -11,32 +12,11 @@ services:
       - file-net
     ports:
       - "8080:8080"
-
-  prometheus:
-    image: prom/prometheus:latest
-    container_name: prometheus
-    networks:
-      - file-net
-    ports:
-      - "9090:9090"
-    volumes:
-      - ./monitoring/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
-
-  grafana:
-    image: grafana/grafana:latest
-    container_name: grafana
-    networks:
-      - file-net
-    ports:
-      - "3000:3000"
     environment:
-      - GF_SECURITY_ADMIN_PASSWORD=admin
-    volumes:
-      - grafana-storage:/var/lib/grafana
+      # Point to your local Prometheus and Grafana
+      - PROMETHEUS_URL=http://host.docker.internal:9090
+      - GRAFANA_URL=http://host.docker.internal:3000
 
 networks:
   file-net:
     driver: bridge
-
-volumes:
-  grafana-storage:
